# Automated-Ansible-Role-Documentation

./: .aar-doc.yml  .gitignore  .gitlab-ci.yml  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  main.py  pyproject.toml  renovate.json
.github/: version-drafter.yml
.github/workflows/: lint.yml  pypi.yml  release.yml  test.yml
aar_doc/: cli.py  core.py  defaults.py  markdown.py
aar_doc/templates/: markdown.j2
ansible_docs/: cli.py
ansible_role_docs/: cli.py
ansible_role_docs/templates/: markdown.j2
templates/: markdown.j2
tests/: test_cli.py  test_core.py  test_defaults.py  test_markdown.py
tests/fixtures/roles/extended/: README.md
tests/fixtures/roles/extended/meta/: argument_specs.yml  main.yml
tests/fixtures/roles/generate_defaults/defaults/: main.yml  overwrite.yml
tests/fixtures/roles/generate_defaults/meta/: argument_specs.yml  main.yml
tests/fixtures/roles/generate_defaults_no_defaults/meta/: argument_specs.yml  main.yml
tests/fixtures/roles/home_dir_expand/: .ansible-docs.yml  README.md
tests/fixtures/roles/home_dir_expand/meta/: main.yml
tests/fixtures/roles/inject/: README.md
tests/fixtures/roles/inject/meta/: main.yml
tests/fixtures/roles/markup/: README.md
tests/fixtures/roles/markup/meta/: argument_specs.yml  main.yml
tests/fixtures/roles/meta_main_yaml/: README.md
tests/fixtures/roles/meta_main_yaml/meta/: main.yml
tests/fixtures/roles/minimum/: README.md
tests/fixtures/roles/minimum/meta/: main.yml
tests/fixtures/roles/missing_arg_spec/: README.md
tests/fixtures/roles/missing_arg_spec/meta/: main.yml
tests/fixtures/roles/missing_doc_strings/: README.md
tests/fixtures/roles/missing_doc_strings/meta/: argument_specs.yml  main.yml
tests/fixtures/roles/missing_meta_main_yaml/: README.md
tests/fixtures/roles/missing_meta_main_yaml/meta/: argument_specs.yml
tests/fixtures/roles/multiline/: README.md
tests/fixtures/roles/multiline/meta/: argument_specs.yml  main.yml
tests/fixtures/roles/multiple_entrypoints/: README.md
tests/fixtures/roles/multiple_entrypoints/meta/: main.yml
tests/fixtures/roles/no_options/: README.md
tests/fixtures/roles/no_options/meta/: argument_specs.yml  main.yml
tests/fixtures/roles/role001/: README.md
tests/fixtures/roles/role001/meta/: argument_specs.yml  main.yml
tests/fixtures/roles/template/: .ansible-docs.yml  README.md  template.j2
tests/fixtures/roles/template/defaults/: main.yml
tests/fixtures/roles/template/meta/: main.yml
tests/fixtures/roles/wrong_type/: README.md
tests/fixtures/roles/wrong_type/meta/: argument_specs.yml  main.yml
