[tool.poetry]
name = "aar_doc"
version = "2.4.0"
description = "A tool for generating docs for Ansible roles"
readme = "README.md"
authors = ["Miika Kankare <miika@kanka.re>", "Sebastian Gumprich <sebastian.gumprich@telekom.de>"]
license = "MIT"
homepage = "https://github.com/telekom-mms/aar_doc/"
repository = "https://github.com/telekom-mms/aar_doc/"
documentation = "https://github.com/telekom-mms/aar_doc/"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
Jinja2 = "^3.1.2"
typer = "^0.24.0"
ruamel-yaml = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "25.11.0"
mypy = "1.19.1"
pytest = "8.4.2"
pytest-cov = "7.0.0"
isort = "6.1.0"

[tool.poetry.scripts]
aar-doc = "aar_doc.cli:app"

[tool.poetry.group.dev.dependencies]
pylint = "3.3.9"
pre-commit = "4.3.0"
isort = "6.1.0"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "."

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["too-many-arguments","too-many-positional-arguments","too-many-nested-blocks","too-many-branches"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
